c/examples/gcc/testsuite/c-c++-common/tm/abort-1.c
/* { dg-do compile } */

void f(void)
{
  __transaction_cancel;		/* { dg-error "without transactional" } */
}
